bugfix(comment): fixed getAllPosts, fixed reponse struct in getAllCommens function, fixed swagger docs
