# backend/docs/swagger.json
@@ -1089,16 +1089,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/comment.GetAllCommentsResponse"
+                                    "$ref": "#/definitions/model.Response"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/comment.Comment"
-                                            }
+                                            "$ref": "#/definitions/comment.GetAllCommentsResponse"
                                         }
                                     }
                                 }
@@ -2125,12 +2122,14 @@
         "comment.GetAllCommentsResponse": {
             "type": "object",
             "properties": {
-                "data": {},
+                "comments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/comment.Comment"
+                    }
+                },
                 "meta": {
                     "$ref": "#/definitions/pagination.Pagination"
-                },
-                "status": {
-                    "$ref": "#/definitions/model.status"
                 }
             }
         },
